# plaid-python

./: .gitignore  .pdm.toml  Justfile  README.md  README.rst  lumache.py  pyproject.toml
.github/workflows/: ci.yaml  publish.yaml  test.yaml
docs/: index.html  plaid2.html
docs/plaid2/: async_client.html  authenticator.html  client.html  logger.html
examples/: accounts_balance_get.py  accounts_get.py  application_get.py  asset_report_audit_copy_create.py  asset_report_audit_copy_get.py  asset_report_audit_copy_remove.py  asset_report_create.py  asset_report_filter.py  asset_report_get.py  asset_report_pdf_get.py  asset_report_refresh.py  asset_report_relay_create.py  asset_report_relay_get.py  asset_report_relay_refresh.py  asset_report_relay_remove.py  asset_report_remove.py  auth_get.py  bank_transfer_balance_get.py  bank_transfer_cancel.py  bank_transfer_create.py  bank_transfer_event_list.py  bank_transfer_event_sync.py  bank_transfer_get.py  bank_transfer_list.py  bank_transfer_migrate_account.py  bank_transfer_sweep_get.py  bank_transfer_sweep_list.py  categories_get.py  create_payment_token.py  credit_audit_copy_token_create.py  credit_bank_income_get.py  credit_bank_income_pdf_get.py  credit_bank_income_refresh.py  credit_employment_get.py  credit_payroll_income_get.py  credit_payroll_income_precheck.py  credit_payroll_income_refresh.py  credit_relay_create.py  credit_relay_get.py  credit_relay_refresh.py  (+129 more)
plaid/: __init__.py
plaid2/: __init__.py  async_client.py  authenticator.py  client.py  logger.py  model.py
tests/: test_client.py
(+970 files in other folders)
