[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "lumache"
authors = [{name = "Graziella", email = "graziella@lumache"}]
version = "2.0.0"
description = "Lumache - Python library for cooks and food lovers."
dependencies = [
    "requests>=2.18.4",
]

[tool]
[tool.pdm]
